# sqrt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  NAMES  README.md  codecov.yaml  newtonraphson.F90  newtonraphson.c  newtonraphson.cpp  newtonraphson.f90  newtonraphson.h  sqrt.F90  sqrt.c  sqrt.cpp  sqrt.f90  sqrt.h  sqrt_c.f90  sqrt_f90.cpp  sqrt_types.F90  sqrt_types.f90  unit_test.py
.github/: PULL_REQUEST_TEMPLATE.md  main.workflow
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yaml
tests/: test_int_2x.F90  test_isEven.F90  test_nr_sqrt.F90
unit_test/: CMakeLists.txt  test_newtonraphson.pf
unit_test/tests/: testSuites.inc  test_int_sq.F90  test_isEven.F90  test_newtonraphson.F90  test_nr_sqrt.F90
